update get-user api
